<resources>
    <string name="app_name">Coffee Order</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_value">1</string>
    <string name="price">Price</string>
    <string name="order">Order</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="name_of_user">Enter your name</string>
    <string name="add_chocolate">Add chocolate</string>
    <string name="add_cream">Add cream</string>
    <string name="thank_you">\nThank You!</string>
    <string name="name">"Name: "</string>
    <string name="total">Total: $</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="coffee_for">"Coffee for: "</string>
</resources>