<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        style="@style/text_style"
        android:id="@+id/name_of_user"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:hint="@string/name_of_user"/>


    <TextView
        style="@style/text_style"
        android:text="@string/quantity" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/plusAndMinus"
            android:text="@string/plus"
            android:onClick="increment" />

        <TextView
            android:id="@+id/quantity_text_view"
            style="@style/text_style"
            android:textColor="@android:color/black"
            android:text="@string/quantity_value" />

        <Button
            style="@style/plusAndMinus"
            android:text="@string/minus"
            android:onClick="decrement" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/chocolate_box"
        style="@style/check_box_style"
        android:text="@string/add_chocolate"/>

    <CheckBox
        android:id="@+id/cream_box"
        style="@style/check_box_style"
        android:text="@string/add_cream"/>

    <Button
        style="@style/button_style"
        android:text="@string/order"
        android:onClick="submitOrder" />

</LinearLayout>